# minesweeper

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
CMakeModules/: CodeCoverage.cmake
docs/tools/: cmake.md  conan.md
include/: .case.hpp.swp  case.hpp  grid.hpp
include/base/: case.hpp  game.hpp  grid.hpp  initializer.hpp  square.hpp
src/: .case.cpp.swp  case.cpp  grid.cpp  main.cpp
src/base/: case.cpp  game.cpp  grid.cpp  initializer.cpp  square.cpp
test/: CMakeLists.txt  test_base_case.cpp  test_base_game.cpp  test_base_grid.cpp  test_base_initializer.cpp  test_base_square.cpp
